# QubitCoin-Core

./: .gitignore  Cargo.toml  LICENSE  README.md  TAREAS_COMPLETADAS.txt  build_qbitcoin_project.py  compile_latex.bat  compile_whitepapers.bat  i18n.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  routing.ts  tailwind.config.ts  vercel.json  ¡TENEMOS xelatex + Node.js 20 inst.txt.md
.qwen/: PROJECT_SUMMARY.md  QubitCoin (QBC).md  WHITEPAPER_TECNICO_MAESTRO.md
QbitCoin_Project_Complete/: Dossier_Corporativo_EN.md  README_QbitCoin.md  Whitepaper_Tecnico_Bilingue.md  qbitcoinproyect.md
app/: globals.css  layout.tsx  page.tsx
emails/: dm_binance_labs.txt  eu_quantum_flagship_form.txt  polkadot_treasury_proposal.md  template_50_vcs.txt  web3_foundation_application.txt
investors/: dossier_v2.tex  pitch_deck.md  pitch_deck.tex
landing/: README.md  index.html  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
landing/app/: icon.tsx  (+4 more)
messages/: de.json  en.json  es.json
rubikpow/: Cargo.toml
rubikpow/src/: lib.rs
src/: constants.ts  i18n.ts  lib.rs  middleware.ts  test.ts  utils.ts
whitepaper/: QbitCoin_Content_Core.tex  QbitCoin_Whitepaper_DE.aux  QbitCoin_Whitepaper_DE.tex  QbitCoin_Whitepaper_DE.toc  QbitCoin_Whitepaper_EN.aux  QbitCoin_Whitepaper_EN.tex  QbitCoin_Whitepaper_EN.toc  QbitCoin_Whitepaper_ES.aux  QbitCoin_Whitepaper_ES.tex  QbitCoin_Whitepaper_ES.toc  QbitCoin_Whitepaper_v1.0.aux  QbitCoin_Whitepaper_v1.0.out  QbitCoin_Whitepaper_v1.0.tex  QbitCoin_Whitepaper_v1.0.toc  QbitCoin_Whitepaper_v1.0_CN.tex  QbitCoin_Whitepaper_v1.0_DE.aux  (+32 more)
(+42 files in other folders)
