[package]
name = "qubitcoin-core"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Raúl Rueda Adán", "Gemini (CTO)"]
description = "QubitCoin - Quantum-Resistant Blockchain based on Permutation Groups"
license = "GPL-3.0"
repository = "https://github.com/RaulObsidian/QubitCoin-Core"

[dependencies]
rand = "0.8"
sha3 = "0.10"
rayon = "1.7"
criterion = { version = "0.5", features = ["html_reports"] }
frame-support = { version = "4.0", default-features = false }
frame-system = { version = "4.0", default-features = false }
sp-std = { version = "5.0", default-features = false }
dilithium = "0.3"
kyber = "0.3"
pqcrypto-traits = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bench]]
name = "rubikpow_benchmarks"
harness = false